fix: Reduce height of dropdown menus
The dropdown menu on the stats viewer page for subdivision was longer
than the available space between the bottom of the footer and the drop
down selector, causing it to push out of bounds (which resulted in a
white bar below the footer when the dropdown was opened).

--- a/pointercrate-core-pages/static/css/ui.css
+++ b/pointercrate-core-pages/static/css/ui.css
@@ -498,7 +498,7 @@ textarea:invalid {
   top: 2em; /* place it below the box! */
 
   width: calc(100% - 2px);
-  max-height: 400px;
+  max-height: 290px;
   overflow-y: scroll;
 
   background: white;
